5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1594_1801.log
== TEST (2019-03-26 16:33:13) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes"))

print("Abra" " " objt*n)

-- ERROR:
File "XXXX", line 7
    print("Abra" " " objt*n)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:32) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes"))

print("Abra" " " obj*n)

-- ERROR:
File "XXXX", line 7
    print("Abra" " " obj*n)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:50) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes"))

print("Abra" " " obj)

-- ERROR:
File "XXXX", line 7
    print("Abra" " " obj)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:34:11) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes"))

print(obj)

-- OUTPUT:
livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:34:48) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes"))

print("Abra" + " " + obj)

-- OUTPUT:
Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:35:42) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes? "))

print(("Abra" + " " + obj)*n)

-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:08) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes? "))

print(("Abra" + " " + obj " ")*n)

-- ERROR:
File "XXXX", line 7
    print(("Abra" + " " + obj " ")*n)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:23) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes? "))

print(("Abra" + " " + obj)" "*n)

-- ERROR:
File "XXXX", line 7
    print(("Abra" + " " + obj)" "*n)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:37:04) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes? "))

print(("Abra" + " " + obj + " ")*n)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:37:20) 
-- CODE:
# Leitura do objeto
obj = input("Diga o nome de um objeto: ")

# Leitura do numero de repeticoes
n = int(input("Qual o numero de repeticoes? "))

print(("Abra" + " " + obj + " ")*n)

-- EXECUTION TIME:
0.143408
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
